# msix-packaging

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  LICENSE  Microsoft.MSIX.Packaging.targets  Microsoft.xPlat.AppxPackaging.targets  Package.nuspec.cmakein  README.md  SUPPORT.md  THIRD  PARTY CODE NOTICE  THIRD PARTY CODE NOTICE  Thumbs.db  config.h.cmake.in  configure.ac  makeaosp-arm  makeaosp-arm64  makeaosp-armv7a  makeaosp-x86  makeaosp.sh  makeaosponmacx86.sh  makeaosponmacx86chk.sh  makeaosponwinx86.cmd  makeios.sh  makeiosarm64  makeiossim  makeiossimchk  makelinux  makelinux.sh  makelinuxchk  makemac  makemac.sh  makemacchk  makewin.cmd  makewin.ps1  makewin32.cmd  makewin32chk.cmd  (+11 more)
lib/: CMakeLists.txt  zlibstat.vcxproj  zlibstatAndroid.vcxproj  zlibstatLinux.vcxproj
lib/xerces/: .appveyor.yml  .travis.yml  CMakeLists.txt  Makefile.am  configure.ac  xerces-c.spec
lib/xerces/cmake/: XercesDLL.cmake  XercesFunctions.cmake  XercesMutexMgrSelection.cmake  XercesNetAccessorSelection.cmake  XercesTranscoderSelection.cmake
lib/xerces/doc/: charter.xml  install.xml  readme.xml  releases_archive.xml  releases_plan.xml  secadv.xml  source-repository.xml
lib/xerces/m4/: xerces_mutexmgr_selection.m4
lib/xerces/scripts/: ci-appveyor-setup  ci-travis  run-test.in
lib/xerces/src/: CMakeLists.txt  Makefile.am
lib/zlib/: CMakeLists.txt
preview/MsixCore/msixmgrLib/: CMakeLists.txt  GeneralUtil.cpp  GeneralUtil.hpp  MsixTraceLoggingProvider.cpp  MsixTraceLoggingProvider.hpp  PackageManager.cpp  PackageManager.hpp  cgmanifest.json  msixmgrLib.vcxproj
sample/: CMakeLists.txt
sample/BundleSample/: BundleSample.cpp  CMakeLists.txt
sample/ExtractContentsSample/: CMakeLists.txt  ExtractContentsSample.cpp  ExtractContestsSample.cpp  ExtractContestsSample.sln  ExtractContestsSample.vcxproj  ExtractContestsSample.vcxproj.filters
sample/OverrideLanguageSample/: CMakeLists.txt  OverrideLanguageSample.cpp
sample/OverrideStreamSample/: CMakeLists.txt  OverrideStreamSample.cpp
sample/PackSample/: CMakeLists.txt  PackSample.cpp
sample/Win7Msix/: README.md  Win7MSIXInstaller.sln
sample/Win7Msix/Win7MSIXInstaller/: Extractor.h  GeneralUtil.h  InstallUI.h  Logger.h  RegUtil.cpp  RegUtil.h  Uninstall.cpp  Uninstall.h  Win7MSIXInstaller.cpp
sample/Win7Msix/Win7MSIXInstallerSetup/: Win7MSIXInstallerSetup.vdproj
sample/inc/: Helpers.hpp
src/: CMakeLists.txt
src/MakeXplat/: CMakeLists.txt  main.cpp
src/idl/: xPlatAppxPackaging.h  xPlatAppxPackaging.idl
src/inc/: Applicability.hpp  AppxBlockMapObject.hpp  AppxBlockMapWriter.hpp  AppxBundleManifest.hpp  AppxFactory.hpp  AppxFile.hpp  AppxManifestObject.hpp  AppxPackageInfo.hpp  AppxPackageObject.hpp  AppxPackageWriter.hpp  AppxPackaging.hpp  AppxSignature.hpp  AppxWindows.hpp  Base64Stream.hpp  BlockMapStream.hpp  CRC32Stream.hpp  ComHelper.hpp  ContentType.hpp  ContentTypeWriter.hpp  Crypto.hpp  DeflateStream.hpp  DirectoryObject.hpp  Encoding.hpp  Enumerators.hpp  Exceptions.hpp  FileNameValidation.hpp  FileStream.hpp  HashStream.hpp  IXml.hpp  InflateStream.hpp  Log.hpp  MSIXFactory.hpp  MSIXResource.hpp  MSIXResource.hpp.cmakein  MSIXWindows.hpp  MsixErrors.hpp  MsixFeatureSelector.hpp  ObjectBase.hpp  OffsetStream.hpp  PartitionStream.hpp  (+24 more)
src/inc/internal/: Applicability.hpp  AppxBlockMapWriter.hpp  AppxBundleWriter.hpp  AppxFactory.hpp  AppxFile.hpp  AppxManifestObject.hpp  AppxManifestValidation.hpp  AppxPackageObject.hpp  AppxPackageWriter.hpp  AppxSignature.hpp  BundleManifestWriter.hpp  BundleValidationHelper.hpp  BundleWriterHelper.hpp  ContentType.hpp  ContentTypeWriter.hpp  Crypto.hpp  DirectoryObject.hpp  Encoding.hpp  FileNameValidation.hpp  FileStream.hpp  GeneralUtil.hpp  HashStream.hpp  ICompressionObject.hpp  IXml.hpp  MSIXFactory.hpp  MappingFileParser.hpp  MemoryStream.hpp  MsixFeatureSelector.hpp  ObjectBase.hpp  README.txt  RangeStream.hpp  SHA256HashStream.hpp  SignatureCreator.hpp  Signing.hpp  StorageObject.hpp  StreamHelper.hpp  VectorStream.hpp  VersionHelpers.hpp  XmlWriter.hpp  ZipObject.hpp  (+3 more)
src/inc/public/: AppxPackaging.hpp  MSIXWindows.hpp  MsixErrors.hpp  README.txt
src/inc/shared/: ComHelper.hpp  Exceptions.hpp  README.txt  StreamBase.hpp  TimeHelpers.hpp
src/makemsix/: CMakeLists.txt  main.cpp
src/msix/: ApplicabilityCommon.cpp  AppxBlockMapObject.cpp  AppxBundleManifest.cpp  AppxFactory.cpp  AppxManifestObject.cpp  AppxManifestValidation.cpp  AppxPackageInfo.cpp  AppxPackageObject.cpp  AppxPackaging_i.cpp  AppxSignature.cpp  CMakeLists.txt  Encoding.cpp  Exceptions.cpp  IXML.cpp  IXml.cpp  InflateStream.cpp  Log.cpp  UnicodeConversion.cpp  ZipObject.cpp  exports.def  exports.def.cmakein  msix.cpp  symbol.map  symbol.map.cmakein  version.rc.in  windowsexports.def.cmakein
src/msix/common/: AppxFactory.cpp  AppxManifestObject.cpp  AppxManifestValidation.cpp  AppxPackageInfo.cpp  Encoding.cpp  Exceptions.cpp  FileNameValidation.cpp  IXml.cpp  Log.cpp  MSIXResource.cpp.cmakein  StreamHelper.cpp  TimeHelpers.cpp  UnicodeConversion.cpp  ZipObject.cpp  msix.cpp
src/msix/pack/: AppxBlockMapWriter.cpp  (+14 more)
src/msixtool/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
src/xPlatAppx/: AppxBlockMapObject.cpp  AppxFactory.cpp  AppxPackageObject.cpp  AppxPackaging_i.cpp  AppxSignature.cpp  CMakeLists.txt  InflateStream.cpp  Log.cpp  RangeStream.cpp  UnicodeConversion.cpp  ZipFileStream.cpp  ZipObject.cpp  ZipStream.cpp  exports.def  symbol.map  xPlatAppx.cpp
test/api/: ApiTest.cpp  ApiTest.hpp  ApiTests.cpp  ApiTests.hpp  CMakeLists.txt  ExpectedValues.hpp  Verify.hpp  main.cpp
xqilla/: ChangeLog  LICENSE  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.in
xqilla/docs/: Doxyfile.devapi.in  Doxyfile.dom3api.in  Doxyfile.simpleapi.in  Doxyfile.xqc.in  dom3_header.html  simple_header.html  xqc_header.html
xqilla/include/: Makefile.am  Makefile.in  xqc.h
xqilla/wintools/: README  genproject.xq  lib_paths.sed  s_projects  s_win32  xqilla.template.xml  xqilla.vs2010.xq  xqilla.vs2010_filter.xq
(+5403 files in other folders)
